# fast-k8s

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  IMPROVEMENTS.md  README.md  WORKFLOWS.md  compose.yaml  deploy.yaml  kind-config.yaml  main.py  openapi.yaml  pyproject.toml  test_main.py
.github/: WORKFLOWS.md
.github/workflows/: daily-repo-status.lock.yml  docker-publish.yml  pr-quality.yml  test-reports.yml  tests.yml
templates/: index.html
